--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <title>Pizza</title>
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <h1>Pizza Size</h1>
+          <select class="form-comtrol" id="size">
+            <option value="8">Mini</option>
+            <option value="10">Small</option>
+            <option value="12">Medium</option>
+            <option value="14">Large</option>
+            <option value="18">Extra Large</option>
+          </select>
+          <h1>Toppings</h1>
+          <input type="checkbox" name="add-topping" value="Cheese" checked><span class="Cheese">Cheese<span><br>
+          <input type="checkbox" name="add-topping" value="Pepperoni"><span class="Meats">Pepperoni</span><br>
+          <input type="checkbox" name="add-topping" value="Salami"><span class="Meats">Salami</span><br>
+          <input type="checkbox" name="add-topping" value="Artichoke"><span class="Veggies">Artichoke</span><br>
+          <input type="checkbox" name="add-topping" value="Chicken"><span class="Meats">Chicken</span><br>
+          <input type="checkbox" name="add-topping" value="Bacon"><span class="Meats">Bacon</span><br>
+          <input type="checkbox" name="add-topping" value="Onions"><span class="Veggies">Onions</span><br>
+          <input type="checkbox" name="add-topping" value="Olives"><span class="Veggies">Olives</span><br>
+          <input type="checkbox" name="add-topping" value="Green-peppers"><span class="Veggies">Green Peppers</span><br>
+          <input type="checkbox" name="add-topping" value="Banana-peppers"><span class="Veggies">Banana Peppers</span><br>
+          <input type="checkbox" name="add-topping" value="Tomatoes"><span class="Veggies">Tomatoes</span><br>
+          <input type="checkbox" name="add-topping" value="Garlic"><span class="Veggies">Garlic</span><br>
+        </div>
+        <div class="col-lg-6">
+          <div class="order-details">
+            <p>Size: <span class="size"></span></p>
+            <p>Toppings: <span class="toppings"></span></p>
+            <p>Price: <span class="price"></span></p>
+          </div>
+
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
