add js Functions

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
             <option value="18">Extra Large</option>
           </select>
           <h1>Toppings</h1>
-          <input type="checkbox" name="add-topping" value="Cheese" checked><span class="Cheese">Cheese<span><br>
-          <input type="checkbox" name="add-topping" value="Pepperoni"><span class="Meats">Pepperoni</span><br>
-          <input type="checkbox" name="add-topping" value="Salami"><span class="Meats">Salami</span><br>
-          <input type="checkbox" name="add-topping" value="Artichoke"><span class="Veggies">Artichoke</span><br>
-          <input type="checkbox" name="add-topping" value="Chicken"><span class="Meats">Chicken</span><br>
-          <input type="checkbox" name="add-topping" value="Bacon"><span class="Meats">Bacon</span><br>
-          <input type="checkbox" name="add-topping" value="Onions"><span class="Veggies">Onions</span><br>
-          <input type="checkbox" name="add-topping" value="Olives"><span class="Veggies">Olives</span><br>
-          <input type="checkbox" name="add-topping" value="Green-peppers"><span class="Veggies">Green Peppers</span><br>
-          <input type="checkbox" name="add-topping" value="Banana-peppers"><span class="Veggies">Banana Peppers</span><br>
-          <input type="checkbox" name="add-topping" value="Tomatoes"><span class="Veggies">Tomatoes</span><br>
-          <input type="checkbox" name="add-topping" value="Garlic"><span class="Veggies">Garlic</span><br>
+          <input type="checkbox" name="add-topping" class="0" value="Cheese" checked><span class="Cheese">Cheese<span><br>
+          <input type="checkbox" name="add-topping" class="40" value="Pepperoni"><span class="Meats">Pepperoni</span><br>
+          <input type="checkbox" name="add-topping" class="40" value="Salami"><span class="Meats">Salami</span><br>
+          <input type="checkbox" name="add-topping" class="30" value="Artichoke"><span class="Veggies">Artichoke</span><br>
+          <input type="checkbox" name="add-topping" class="60" value="Chicken"><span class="Meats">Chicken</span><br>
+          <input type="checkbox" name="add-topping" class="50" value="Bacon"><span class="Meats">Bacon</span><br>
+          <input type="checkbox" name="add-topping" class="30" value="Onions"><span class="Veggies">Onions</span><br>
+          <input type="checkbox" name="add-topping" class="30" value="Olives"><span class="Veggies">Olives</span><br>
+          <input type="checkbox" name="add-topping" class="30" value="Green-peppers"><span class="Veggies">Green Peppers</span><br>
+          <input type="checkbox" name="add-topping" class="30" value="Banana-peppers"><span class="Veggies">Banana Peppers</span><br>
+          <input type="checkbox" name="add-topping" class="30" value="Tomatoes"><span class="Veggies">Tomatoes</span><br>
+          <input type="checkbox" name="add-topping" class="30" value="Garlic"><span class="Veggies">Garlic</span><br>
         </div>
         <div class="col-lg-6">
           <div class="order-details">
