--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <ul id="order-list">
           </ul>
           <div class="col-lg-6">
-            <div class="pizza-details">
+            <div id="pizza-details">
               <p>Size: <span class="size"></span></p>
               <p>Toppings: <span class="toppings"></span></p>
               <p>Price: <span class="price"></span></p>
