--- a/index.html
+++ b/index.html
@@ -14,39 +14,51 @@
             <div class="col-lg-6">
               <h1>Pizza Size</h1>
               <select class="form-comtrol" id="size">
-                <option value="8">Mini</option>
-                <option value="10">Small</option>
-                <option value="12">Medium</option>
-                <option value="14">Large</option>
-                <option value="18">Extra Large</option>
+                <option value="Mini">Mini</option>
+                <option value="Small">Small</option>
+                <option value="Medium">Medium</option>
+                <option value="Large">Large</option>
+                <option value="Extra Large">Extra Large</option>
               </select>
               <h1>Toppings</h1>
-              <input type="checkbox" name="add-topping" class="1" value="Cheese" checked><span class="Cheese">Cheese<span><br>
-                <input type="checkbox" name="add-topping" class="40" value="Pepperoni"><span class="Meats">Pepperoni</span><br>
-                <input type="checkbox" name="add-topping" class="40" value="Salami"><span class="Meats">Salami</span><br>
-                <input type="checkbox" name="add-topping" class="30" value="Artichoke"><span class="Veggies">Artichoke</span><br>
-                <input type="checkbox" name="add-topping" class="60" value="Chicken"><span class="Meats">Chicken</span><br>
-                <input type="checkbox" name="add-topping" class="50" value="Bacon"><span class="Meats">Bacon</span><br>
-                <input type="checkbox" name="add-topping" class="30" value="Onions"><span class="Veggies">Onions</span><br>
-                <input type="checkbox" name="add-topping" class="30" value="Olives"><span class="Veggies">Olives</span><br>
-                <input type="checkbox" name="add-topping" class="30" value="Green-peppers"><span class="Veggies">Green Peppers</span><br>
-                <input type="checkbox" name="add-topping" class="30" value="Banana-peppers"><span class="Veggies">Banana Peppers</span><br>
-                <input type="checkbox" name="add-topping" class="30" value="Tomatoes"><span class="Veggies">Tomatoes</span><br>
-                <input type="checkbox" name="add-topping" class="30" value="Garlic"><span class="Veggies">Garlic</span><br>
-              </div>
-              <button type="submit" class="btn btn-info">Submit Order</button>
-        </form>
-        <hr>
-          <h2>Order Details:</h2>
-          <ul id="order-list">
-          </ul>
-          <div class="col-lg-6">
-            <div id="pizza-details">
-              <p>Size: <span class="size"></span></p>
-              <p>Toppings: <span class="toppings"></span></p>
-              <p>Price: <span class="price"></span></p>
+                <input type="checkbox" name="add-topping" value="Cheese" checked>
+                <label for="Cheese">Cheese</label>
+                <input type="checkbox" name="add-topping" value="Pepperoni">
+                <label for="Pepperoni">Pepperoni</label>
+                <input type="checkbox" name="add-topping" value="Salami">
+                <label for="Salami">Salami</label>
+                <input type="checkbox" name="add-topping" value="Artichoke">
+                <label for="Artichoke">Artichoke</label>
+                <input type="checkbox" name="add-topping" value="Chicken">
+                <label for="Chicken">Chicken</label>
+                <input type="checkbox" name="add-topping"  value="Bacon">
+                <label for="Bacon">Bacon</label>
+                <input type="checkbox" name="add-topping" value="Onions">
+                <label for="Onions">Onions</label>
+                <input type="checkbox" name="add-topping" value="Olives">
+                <label for="Olives">Olives</label>
+                <input type="checkbox" name="add-topping" value="Green-peppers">
+                <label for="Green-peppers">Green-peppers</label>
+                <input type="checkbox" name="add-topping" value="Banana-peppers">
+                <label for="Banana-peppers">Banana-peppers</label>
+                <input type="checkbox" name="add-topping" value="Tomatoes">
+                <label for="Tomatoes">Tomatoes</label>
+                <input type="checkbox" name="add-topping" value="Garlic">
+                <label for="Garlic">Garlic</label>
             </div>
-          </div>
+            <button type="submit" class="btn btn-info">Submit Order</button>
+          </form>
+          <hr>
+            <h3>Confirm Your Order:</h3>
+            <ul id="order-list">
+            </ul>
+            <div class="col-lg-6">
+              <div id="pizza-details">
+                <p>Size: <span class="size"></span></p>
+                <p>Toppings: <span class="toppings"></span></p>
+                <p>Price: <span class="price"></span></p>
+              </div>
+            </div>
 
         </div>
       </div>
